--- a/app/src/main/res/layout/view_content_row.xml
+++ b/app/src/main/res/layout/view_content_row.xml
@@ -39,7 +39,7 @@
         android:text="[city name]"
         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/subject_xCoor"
